Added ipsum and photos

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
       <div class="innercontent">
         <p>We have big contacts we will promote you start on it today and we will talk about what i want next time I want you to take it to the next level, but doing some work for us "pro bono" will really add to your portfolio i promise, make it sexy. Just do what you think.<p>
-        <img src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/QMQ4MDS23Q.jpg" alt="overhead view of two daisies, a coffee cup and a pastry on a table">
+        <img src="https://images.unsplash.com/photo-1521401292936-0a2129a30b1c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2416&q=80">
       </div>
     </div>
     <div class="section section__three">
@@ -40,8 +40,8 @@
         <h1 class="title">Heading Four</h1>
       </div>
       <div class="innercontent">
-        <img src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/WS8UX46Q4U.jpg" alt="a laptop and a single mug">
-        <img src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/PXERJDGPUN.jpg" alt="cherry blossom tree">
+        <img src="https://images.unsplash.com/photo-1507120410856-1f35574c3b45?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80" alt="a laptop and a single mug">
+        <img src="https://images.unsplash.com/photo-1520082379916-7cf029de2c1f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1567&q=80" alt="cherry blossom tree">
         <img src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/2WP1D0T0L4.jpg" alt="kitty touching a cat's nose">
       </div>
     </div>
