--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
         <img src="https://images.unsplash.com/photo-1520082379916-7cf029de2c1f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1567&q=80" alt="cherry blossom tree">
         <img src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/2WP1D0T0L4.jpg" alt="kitty touching a cat's nose">
       </div>
+      <footer>
+        <h6>© 🦄2020</h6>
+      </footer>
     </div>
 </body>
 </html>
